--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.15.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@vercel/analytics": "^1.4.1",
+    "astro": "^4.15.3",
     "tailwindcss": "^3.4.1"
   }
 }
